tdf#135321: fix crash when right click empty in Command list

See bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=163797

Regression from:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=d54202ff690e4e97e018461cc6dc3dfadd36a702
author	Sarper Akdemir <q.sarperakdemir@gmail.com>	2020-02-14 13:17:46 +0300
committer	Muhammet Kara <muhammet.kara@collabora.com>	2020-02-28 18:32:54 +0100
commit	d54202ff690e4e97e018461cc6dc3dfadd36a702 (patch)
tree	5f60f9c473b30e0f59bbf13a6f773595e1e4e759
parent	531f078f3371e909b03b358bc5c9d70df083555f (diff)
tdf#112135: Provide controls through context menu in lists of Customize dialog

Change-Id: I73031811257e1d128bb6bdc11c481f7a63bbc05e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99850
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>